fixtures/Terminal Saved Output.txt
Last login: Thu Jun 13 11:47:00 on ttys000
(base) saritha@Oscars-MacBook-Pro-2 ~ % cd dab_demo
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % ls
README.md	fixtures	scratch
databricks.yml	resources	src
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git add.
git: 'add.' is not a git command. See 'git --help'.

The most similar command is
	add
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git init
hint: Using 'master' as the name for the initial branch. This default branch name
hint: is subject to change. To configure the initial branch name to use in all
hint: of your new repositories, which will suppress this warning, call:
hint: 
hint: 	git config --global init.defaultBranch <name>
hint: 
hint: Names commonly chosen instead of 'master' are 'main', 'trunk' and
hint: 'development'. The just-created branch can be renamed via this command:
hint: 
hint: 	git branch -m <name>
Initialized empty Git repository in /Users/saritha/dab_demo/.git/
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git add.
git: 'add.' is not a git command. See 'git --help'.

The most similar command is
	add
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git add .
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch master

No commits yet

Changes to be committed:
  (use "git rm --cached <file>..." to unstage)
	new file:   .gitignore
	new file:   .vscode/__builtins__.pyi
	new file:   .vscode/extensions.json
	new file:   .vscode/settings.json
	new file:   README.md
	new file:   databricks.yml
	new file:   fixtures/.gitkeep
	new file:   resources/dab_demo_job.yml
	new file:   scratch/README.md
	new file:   src/notebook.ipynb

(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote add origin git@github.com:savytech5/bundle_demo.git
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin master --force
error: src refspec master does not match any
error: failed to push some refs to 'github.com:savytech5/bundle_demo.git'
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin main --force 
error: src refspec main does not match any
error: failed to push some refs to 'github.com:savytech5/bundle_demo.git'
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote add origin git@github.com:savytech5/bundle_demo.git
error: remote origin already exists.
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git commit -m "Initial commit msg"
[master (root-commit) 463e61e] Initial commit msg
 Committer: Saritha <saritha@Oscars-MacBook-Pro-2.local>
Your name and email address were configured automatically based
on your username and hostname. Please check that they are accurate.
You can suppress this message by setting them explicitly. Run the
following command and follow the instructions in your editor to edit
your configuration file:

    git config --global --edit

After doing this, you may fix the identity used for this commit with:

    git commit --amend --reset-author

 10 files changed, 250 insertions(+)
 create mode 100644 .gitignore
 create mode 100644 .vscode/__builtins__.pyi
 create mode 100644 .vscode/extensions.json
 create mode 100644 .vscode/settings.json
 create mode 100644 README.md
 create mode 100644 databricks.yml
 create mode 100644 fixtures/.gitkeep
 create mode 100644 resources/dab_demo_job.yml
 create mode 100644 scratch/README.md
 create mode 100644 src/notebook.ipynb
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch master
nothing to commit, working tree clean
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote add origin git@github.com:savytech5/bundle_demo.git
error: remote origin already exists.
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin master-force
error: src refspec master-force does not match any
error: failed to push some refs to 'github.com:savytech5/bundle_demo.git'
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch master
nothing to commit, working tree clean
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin master --force
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@    WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!     @
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!
Someone could be eavesdropping on you right now (man-in-the-middle attack)!
It is also possible that a host key has just been changed.
The fingerprint for the RSA key sent by the remote host is
SHA256:uNiVztksCsDhcc0u9e8BujQXVUpKZIDTMczCvj3tD2s.
Please contact your system administrator.
Add correct host key in /Users/saritha/.ssh/known_hosts to get rid of this message.
Offending RSA key in /Users/saritha/.ssh/known_hosts:1
Host key for github.com has changed and you have requested strict checking.
Host key verification failed.
fatal: Could not read from remote repository.

Please make sure you have the correct access rights
and the repository exists.
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch master
nothing to commit, working tree clean
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote -v
origin	git@github.com:savytech5/bundle_demo.git (fetch)
origin	git@github.com:savytech5/bundle_demo.git (push)
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote set-url origin git@github.com:savytech5/bundle_demo.git

(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin master --force
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@    WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!     @
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!
Someone could be eavesdropping on you right now (man-in-the-middle attack)!
It is also possible that a host key has just been changed.
The fingerprint for the RSA key sent by the remote host is
SHA256:uNiVztksCsDhcc0u9e8BujQXVUpKZIDTMczCvj3tD2s.
Please contact your system administrator.
Add correct host key in /Users/saritha/.ssh/known_hosts to get rid of this message.
Offending RSA key in /Users/saritha/.ssh/known_hosts:1
Host key for github.com has changed and you have requested strict checking.
Host key verification failed.
fatal: Could not read from remote repository.

Please make sure you have the correct access rights
and the repository exists.
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch master
nothing to commit, working tree clean
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote set-url origin https://github.com/savytech5/bundle_demo.git

(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote -v
origin	https://github.com/savytech5/bundle_demo.git (fetch)
origin	https://github.com/savytech5/bundle_demo.git (push)
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin master --force
Enumerating objects: 17, done.
Counting objects: 100% (17/17), done.
Delta compression using up to 12 threads
Compressing objects: 100% (13/13), done.
Writing objects: 100% (17/17), 4.24 KiB | 2.12 MiB/s, done.
Total 17 (delta 0), reused 0 (delta 0), pack-reused 0
remote: 
remote: Create a pull request for 'master' on GitHub by visiting:
remote:      https://github.com/savytech5/bundle_demo/pull/new/master
remote: 
To https://github.com/savytech5/bundle_demo.git
 * [new branch]      master -> master
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch master
nothing to commit, working tree clean
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % databricks bundle validate
Name: dab_demo
Target: dev
Workspace:
  Host: https://dbc-e050af1d-106d.cloud.databricks.com
  User: kaushik.peravali@risamsoft.com
  Path: /Users/kaushik.peravali@risamsoft.com/.bundle/dab_demo/dev

Validation OK!
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % databricks bundle deploy -t dev
Uploading bundle files to /Users/kaushik.peravali@risamsoft.com/.bundle/dab_demo/dev/files...
Deploying resources...
Updating deployment state...
Deployment complete!
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % databricks bundle run dab_demo_job
Run URL: https://dbc-e050af1d-106d.cloud.databricks.com/?o=3512937117656375#job/777868469754461/run/120603587786372

2024-06-13 13:31:17 "[dev kaushik_peravali] dab_demo_job" RUNNING 
2024-06-13 13:36:21 "[dev kaushik_peravali] dab_demo_job" TERMINATED SUCCESS 
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % ls
README.md	fixtures	scratch
databricks.yml	resources	src
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % code .
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % ls
README.md	fixtures	scratch
databricks.yml	resources	src
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % ls
README.md	fixtures	scratch
databricks.yml	resources	src
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git add .
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin master --force 
Everything up-to-date
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote set-url origin https://github.com/savytech5/bundle_demo.git

(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin master --force
Everything up-to-date
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git add .
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git commit -m "COMMIT CHANGES" 
[master fb10b44] COMMIT CHANGES
 Committer: Saritha <saritha@Oscars-MacBook-Pro-2.local>
Your name and email address were configured automatically based
on your username and hostname. Please check that they are accurate.
You can suppress this message by setting them explicitly. Run the
following command and follow the instructions in your editor to edit
your configuration file:

    git config --global --edit

After doing this, you may fix the identity used for this commit with:

    git commit --amend --reset-author

 3 files changed, 88 insertions(+)
 create mode 100644 .gitHub/sarithadabproject/.DS_Store
 create mode 100644 .gitHub/sarithadabproject/github/workflows/dev.yaml
 create mode 100644 .gitHub/sarithadabproject/github/workflows/prod.yaml
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git remote set-url origin https://github.com/savytech5/bundle_demo.git

(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin master --force                                        
Enumerating objects: 10, done.
Counting objects: 100% (10/10), done.
Delta compression using up to 12 threads
Compressing objects: 100% (7/7), done.
Writing objects: 100% (9/9), 1.35 KiB | 1.35 MiB/s, done.
Total 9 (delta 2), reused 0 (delta 0), pack-reused 0
remote: Resolving deltas: 100% (2/2), completed with 1 local object.
To https://github.com/savytech5/bundle_demo.git
   463e61e..fb10b44  master -> master
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git checkout main
error: pathspec 'main' did not match any file(s) known to git
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git checkout master
Already on 'master'
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git checkout -b dev
Switched to a new branch 'dev'
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin dev
Total 0 (delta 0), reused 0 (delta 0), pack-reused 0
remote: 
remote: Create a pull request for 'dev' on GitHub by visiting:
remote:      https://github.com/savytech5/bundle_demo/pull/new/dev
remote: 
To https://github.com/savytech5/bundle_demo.git
 * [new branch]      dev -> dev
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch dev
nothing to commit, working tree clean
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git add .github/workflows/deploy.yml
warning: could not open directory '.github/workflows/': No such file or directory
fatal: pathspec '.github/workflows/deploy.yml' did not match any files
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git add .github/workflows/dev.yml
'warning: could not open directory '.github/workflows/': No such file or directory
fatal: pathspec '.github/workflows/dev.yml' did not match any files
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git checkout main
error: pathspec 'main' did not match any file(s) known to git
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git checkout master
Switched to branch 'master'
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git merge master
Already up to date.
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git push origin dev
Everything up-to-date
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch master
nothing to commit, working tree clean
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git add .github/workflows/dev.yml
warning: could not open directory '.github/workflows/': No such file or directory
fatal: pathspec '.github/workflows/dev.yml' did not match any files
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git status
On branch master
nothing to commit, working tree clean
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % git checkout dev
Switched to branch 'dev'
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % mkdir -p .github/workflows
(base) saritha@Oscars-MacBook-Pro-2 dab_demo % nano .github/workflows/dev.yml

  UW PICO 5.09            File: .github/workflows/dev.yml             Modified  

    
      - shell: bash
        name: Run pipeline update
        run: |
          databricks bundle run dab_project_job --refresh-all 2>&1 | tee
output.log
        env:
          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
          DATABRICKS_BUNDLE_ENV: dev   
    
      
        
        
          

        
          
          

^G Get Help  ^O WriteOut  ^R Read File ^Y Prev Pg   ^K Cut Text  ^C Cur Pos   
^X Exit      ^J Justify   ^W Where is  ^V Next Pg   ^U UnCut Text^T To Spell  
